Bug 1001539 - Fix compilation warning in ccsip_pmh.c. r=bwc